Adjust pkg name

--- a/electron/package.json
+++ b/electron/package.json
@@ -2,7 +2,7 @@
   "name": "@lere/electron",
   "version": "1.0.0",
   "main": "main.js",
-  "author": "Fliper de Boteco",
+  "author": "fliperdeboteco",
   "license": "MIT",
   "private": false,
   "scripts": {
