--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lere",
   "version": "1.0.0",
-  "author": "Fliper de Boteco",
+  "author": "fliperdeboteco",
   "license": "MIT",
   "private": true,
   "scripts": {
