--- a/electron/package.json
+++ b/electron/package.json
@@ -2,13 +2,13 @@
   "name": "@lere/electron",
   "version": "1.0.0",
   "main": "main.js",
-  "author": "fliperdeboteco",
+  "author": "fliperama86",
   "license": "MIT",
   "private": false,
   "scripts": {
     "start": "electron ."
   },
   "devDependencies": {
-    "electron": "^28.0.0"
+    "electron": "^33.2.1"
   }
 }
