Revert "replace yarn with pnpm"
This reverts commit c41e86d5dd6e62e2e8a1155a102e7125f5d2e91e.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "electron": "pnpm --filter @lere/electron",
-    "web": "pnpm --filter @lere/web"
+    "electron": "yarn workspace @lere/electron",
+    "web": "yarn workspace @lere/web"
   },
   "workspaces": [
     "electron",
