--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "dev": "turbo run dev",
     "electron": "yarn workspace @lere/electron",
-    "web": "yarn workspace @lere/web",
-    "core": "yarn workspace @lere/core",
-    "build": "yarn core build && yarn web build",
-    "dev": "yarn core build && yarn web dev"
+    "web": "yarn workspace @lere/web"
   },
-  "workspaces": [
-    "core",
-    "electron",
-    "web"
-  ]
+  "devDependencies": {
+    "prettier": "^3.5.0",
+    "turbo": "^2.4.2",
+    "typescript": "5.7.3"
+  },
+  "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=22"
+  }
 }
