update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@ python/__pycache__/
 
 .turbo
 .turbo/*
+
+.turbo/preferences
+.turbo/preferences/*
+
+.turbo/tmp
+.turbo/tmp/*
+
+.turbo/tmp/cache
+.turbo/tmp/cache/*
